module/styles/commons-importing-controller.less
/*
 * Copyright (c) 2017, Tony Opara
 *        All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 * - Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * Neither the name of Google nor the names of its contributors may be used to
 * endorse or promote products derived from this software without specific
 * prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
@import-less url("theme.less");

.commons-panel {
  margin-bottom: 2em;
}

.commons-panel > h1 {
  font-size: 130%;
  margin-bottom: 0.5em;
}

.grid-layout > table {
  width: 70%;
}

div.grid-layout > table.categoriesTable > tbody > tr > td.fixed-text-depth {
  width: 15%;
  text-align: center;
}

.fixed-text {
  width: 65%;
}

div.grid-layout > table.categoriesTable > tbody > tr > td.depth-input-td {
  width: 15%;
  text-align: center;
}

.depth-input-box {
  width: 30%;
}
.x-button-td {
  text-align: left;
}

.buttons-div {
  padding-left: 5px;
}

.fbs-reset.fbs-pane.fbs-pane-type {
  width:561px;
}

.scrollable {
	height: 400px;
	overflow: auto;
}

.commons-importing-wizard-header {
  font-size: 1.3em;
  background: @chrome_primary;
  padding: @padding_tight;
  }

.commons-importing-parsing-data-panel {
  font-size: 1.1em;
  position: absolute;
  overflow: auto;
  }

.commons-importing-progress-data-panel {
  position: absolute;
  overflow: auto;
  font-size: 200%;
  padding: 3em;
  background: rgba(255, 255, 255, 0.7);
  text-align: center;
  }

.commons-importing-parsing-control-panel {
  font-size: 1.3em;
  position: absolute;
  overflow: auto;
  border-top: 5px solid @chrome_primary;
  background: white;
  padding: @padding_looser;
  }

